# stackd

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
stackdiac/api/: server.py
stackdiac/cli/: __init__.py  build.py  create.py  ui.py
stackdiac/models/: __init__.py  backend.py  binary.py  cluster.py  config.py  operation.py  provider.py  repo.py  secret.py  spec.py  stack.py
stackdiac/stackd/: __init__.py  filters.py  sdmod.py  stackd.py
stackdiac/ui/: bundle.js  bundle.js.LICENSE.txt
stackdiac/views/: module.py
